--- a/04-PO33Q.html
+++ b/04-PO33Q.html
@@ -136,6 +136,11 @@ window.MathJax = {
 </ul>
           </div> <!-- /navcollapse -->
             <div class="quarto-navbar-tools">
+  <a href="" class="quarto-reader-toggle quarto-navigation-tool px-1" onclick="window.quartoToggleReader(); return false;" title="Toggle reader mode">
+  <div class="quarto-reader-toggle-btn">
+  <i class="bi"></i>
+  </div>
+</a>
 </div>
       </div> <!-- /container-fluid -->
     </nav>
@@ -791,8 +796,8 @@ Table&nbsp;3: What is left…
 
     <script>
 
-      function styleCell_hua8rkdmbgdvykjclx2y(i, j, css_id) {
-          var table = document.getElementById("tinytable_hua8rkdmbgdvykjclx2y");
+      function styleCell_2a1o8980m7p78j1na4f4(i, j, css_id) {
+          var table = document.getElementById("tinytable_2a1o8980m7p78j1na4f4");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -801,8 +806,8 @@ Table&nbsp;3: What is left…
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_hua8rkdmbgdvykjclx2y(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_hua8rkdmbgdvykjclx2y");
+      function spanCell_2a1o8980m7p78j1na4f4(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_2a1o8980m7p78j1na4f4");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -833,21 +838,21 @@ Table&nbsp;3: What is left…
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 2 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_plmekmllyoeqmf6c2z8u',}, 
-          { positions: [ { i: '6', j: 1 }, { i: '6', j: 2 }, { i: '6', j: 3 },  ], css_id: 'tinytable_css_jdi2lud5mrxk7t6y8dae',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '4', j: 1 }, { i: '5', j: 1 }, { i: '2', j: 2 }, { i: '4', j: 2 }, { i: '1', j: 2 }, { i: '2', j: 3 }, { i: '3', j: 1 }, { i: '4', j: 3 }, { i: '5', j: 2 }, { i: '3', j: 2 }, { i: '1', j: 3 }, { i: '3', j: 3 }, { i: '5', j: 3 },  ], css_id: 'tinytable_css_j7kacjkmvo7j7wswbvr6',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_sxl7e82xlidebxtbkrds',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 },  ], css_id: 'tinytable_css_6iwzj8dxq6dhaih0qq7q',}, 
-          { positions: [ { i: '6', j: 0 },  ], css_id: 'tinytable_css_jlk40wdl3z2rxrmd6q8s',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 },  ], css_id: 'tinytable_css_5afrcb0an45kzifwdljr',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_0iz9zr1p3yfd7n39t89c',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_gfbptz7dzvix8x849ftq',}, 
+          { positions: [ { i: '-1', j: 2 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_wntvibd0gzhjm5w0i02l',}, 
+          { positions: [ { i: '6', j: 1 }, { i: '6', j: 2 }, { i: '6', j: 3 },  ], css_id: 'tinytable_css_3434p5gnucx8w6859oo6',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '4', j: 1 }, { i: '5', j: 1 }, { i: '2', j: 2 }, { i: '4', j: 2 }, { i: '1', j: 2 }, { i: '2', j: 3 }, { i: '3', j: 1 }, { i: '4', j: 3 }, { i: '5', j: 2 }, { i: '3', j: 2 }, { i: '1', j: 3 }, { i: '3', j: 3 }, { i: '5', j: 3 },  ], css_id: 'tinytable_css_ezimj78u870f2256dqjc',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_d3xn26pm4tnx4xjkuqiu',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 },  ], css_id: 'tinytable_css_qxfhmu3enxgzorctzo4b',}, 
+          { positions: [ { i: '6', j: 0 },  ], css_id: 'tinytable_css_l83e5oznecsvlor3b0yo',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 },  ], css_id: 'tinytable_css_u7rmv8tm2yktkb0n77xg',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_e4lg41ctufjob11gce0r',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_1mrbr0v41r3byzej62su',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_hua8rkdmbgdvykjclx2y(cell.i, cell.j, group.css_id);
+                  styleCell_2a1o8980m7p78j1na4f4(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -855,18 +860,18 @@ Table&nbsp;3: What is left…
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_plmekmllyoeqmf6c2z8u, .table th.tinytable_css_plmekmllyoeqmf6c2z8u { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_jdi2lud5mrxk7t6y8dae, .table th.tinytable_css_jdi2lud5mrxk7t6y8dae { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_j7kacjkmvo7j7wswbvr6, .table th.tinytable_css_j7kacjkmvo7j7wswbvr6 { text-align: center; }
-      .table td.tinytable_css_sxl7e82xlidebxtbkrds, .table th.tinytable_css_sxl7e82xlidebxtbkrds { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_6iwzj8dxq6dhaih0qq7q, .table th.tinytable_css_6iwzj8dxq6dhaih0qq7q { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_jlk40wdl3z2rxrmd6q8s, .table th.tinytable_css_jlk40wdl3z2rxrmd6q8s { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_5afrcb0an45kzifwdljr, .table th.tinytable_css_5afrcb0an45kzifwdljr { text-align: left; }
-      .table td.tinytable_css_0iz9zr1p3yfd7n39t89c, .table th.tinytable_css_0iz9zr1p3yfd7n39t89c { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_gfbptz7dzvix8x849ftq, .table th.tinytable_css_gfbptz7dzvix8x849ftq { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_wntvibd0gzhjm5w0i02l, .table th.tinytable_css_wntvibd0gzhjm5w0i02l { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_3434p5gnucx8w6859oo6, .table th.tinytable_css_3434p5gnucx8w6859oo6 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_ezimj78u870f2256dqjc, .table th.tinytable_css_ezimj78u870f2256dqjc { text-align: center; }
+      .table td.tinytable_css_d3xn26pm4tnx4xjkuqiu, .table th.tinytable_css_d3xn26pm4tnx4xjkuqiu { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_qxfhmu3enxgzorctzo4b, .table th.tinytable_css_qxfhmu3enxgzorctzo4b { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_l83e5oznecsvlor3b0yo, .table th.tinytable_css_l83e5oznecsvlor3b0yo { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_u7rmv8tm2yktkb0n77xg, .table th.tinytable_css_u7rmv8tm2yktkb0n77xg { text-align: left; }
+      .table td.tinytable_css_e4lg41ctufjob11gce0r, .table th.tinytable_css_e4lg41ctufjob11gce0r { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_1mrbr0v41r3byzej62su, .table th.tinytable_css_1mrbr0v41r3byzej62su { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_hua8rkdmbgdvykjclx2y" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_2a1o8980m7p78j1na4f4" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
