--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -200,6 +200,11 @@ window.Quarto = {
 </ul>
           </div> <!-- /navcollapse -->
             <div class="quarto-navbar-tools">
+  <a href="" class="quarto-reader-toggle quarto-navigation-tool px-1" onclick="window.quartoToggleReader(); return false;" title="Toggle reader mode">
+  <div class="quarto-reader-toggle-btn">
+  <i class="bi"></i>
+  </div>
+</a>
 </div>
       </div> <!-- /container-fluid -->
     </nav>
@@ -704,8 +709,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_fnvnyl6ait0cyuv9e6oj(i, j, css_id) {
-          var table = document.getElementById("tinytable_fnvnyl6ait0cyuv9e6oj");
+      function styleCell_b1pup5xmos483hqcm0hs(i, j, css_id) {
+          var table = document.getElementById("tinytable_b1pup5xmos483hqcm0hs");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -714,8 +719,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_fnvnyl6ait0cyuv9e6oj(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_fnvnyl6ait0cyuv9e6oj");
+      function spanCell_b1pup5xmos483hqcm0hs(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_b1pup5xmos483hqcm0hs");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -746,20 +751,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_buuo72xfq3mp9gcnq60l',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_7heila56fcumtpbsc4vu',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_zv2ck2sfwylxp98y3zht',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_lz8duc9pi4g36hqo2oxp',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_peq24d5wp6ysjx5xspp3',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_5mpiufblmv6wdf599pwv',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_igu3qk95wixxwpeejgnt',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_kmfm88gdgyxx3q53jxxa',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_peyj8msn82ep0sbsfsya',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_fne9gcxrglfc1po8lwlk',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_24mlqpwdlanf315mzkyo',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_lnebj5heguhcmv3udfa6',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_uxfkuwe9xudu9zwk8rz8',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_wkqer5qm6ery23ru6hr8',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_rj6a1dr2pibiv5nrprnc',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_iboksey47r6fx6c0hact',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_fnvnyl6ait0cyuv9e6oj(cell.i, cell.j, group.css_id);
+                  styleCell_b1pup5xmos483hqcm0hs(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -767,17 +772,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_buuo72xfq3mp9gcnq60l, .table th.tinytable_css_buuo72xfq3mp9gcnq60l { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_7heila56fcumtpbsc4vu, .table th.tinytable_css_7heila56fcumtpbsc4vu { text-align: center; }
-      .table td.tinytable_css_zv2ck2sfwylxp98y3zht, .table th.tinytable_css_zv2ck2sfwylxp98y3zht { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_lz8duc9pi4g36hqo2oxp, .table th.tinytable_css_lz8duc9pi4g36hqo2oxp { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_peq24d5wp6ysjx5xspp3, .table th.tinytable_css_peq24d5wp6ysjx5xspp3 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_5mpiufblmv6wdf599pwv, .table th.tinytable_css_5mpiufblmv6wdf599pwv { text-align: left; }
-      .table td.tinytable_css_igu3qk95wixxwpeejgnt, .table th.tinytable_css_igu3qk95wixxwpeejgnt { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_kmfm88gdgyxx3q53jxxa, .table th.tinytable_css_kmfm88gdgyxx3q53jxxa { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_peyj8msn82ep0sbsfsya, .table th.tinytable_css_peyj8msn82ep0sbsfsya { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_fne9gcxrglfc1po8lwlk, .table th.tinytable_css_fne9gcxrglfc1po8lwlk { text-align: center; }
+      .table td.tinytable_css_24mlqpwdlanf315mzkyo, .table th.tinytable_css_24mlqpwdlanf315mzkyo { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_lnebj5heguhcmv3udfa6, .table th.tinytable_css_lnebj5heguhcmv3udfa6 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_uxfkuwe9xudu9zwk8rz8, .table th.tinytable_css_uxfkuwe9xudu9zwk8rz8 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_wkqer5qm6ery23ru6hr8, .table th.tinytable_css_wkqer5qm6ery23ru6hr8 { text-align: left; }
+      .table td.tinytable_css_rj6a1dr2pibiv5nrprnc, .table th.tinytable_css_rj6a1dr2pibiv5nrprnc { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_iboksey47r6fx6c0hact, .table th.tinytable_css_iboksey47r6fx6c0hact { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_fnvnyl6ait0cyuv9e6oj" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_b1pup5xmos483hqcm0hs" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -881,8 +886,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_fwjvlhovlfw8vpzm36b5(i, j, css_id) {
-          var table = document.getElementById("tinytable_fwjvlhovlfw8vpzm36b5");
+      function styleCell_wn8yudpte8l0vgmjvhoe(i, j, css_id) {
+          var table = document.getElementById("tinytable_wn8yudpte8l0vgmjvhoe");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -891,8 +896,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_fwjvlhovlfw8vpzm36b5(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_fwjvlhovlfw8vpzm36b5");
+      function spanCell_wn8yudpte8l0vgmjvhoe(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_wn8yudpte8l0vgmjvhoe");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -923,20 +928,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_2ekrlaeyy7v1i7yytkft',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_xya1rqdj9tbtez8x4r9w',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_6c7m6083292t8z9ivjd2',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_v63koke6mct9npkeepuk',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_siro6sbgg1oseivc8bl0',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_m93r78m1arb6ymxdbusl',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_2fzor4ftpwlx0ajradnl',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_xdi0iavhi35bnzhwjh7a',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_qioxdcz0rh4fq6qxzynt',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_5l4ryj0gnsnrp3hsjf38',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_4wcpklsv1qjbg0op6bih',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_9navcoxlasp5mgpnk348',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_lps91bmw0g4f1soy6248',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_7261afaenjsjlqqhvopz',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_80z7dpxct3amz1z97e88',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_dj0g3xj3pdmi01yi0kl3',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_fwjvlhovlfw8vpzm36b5(cell.i, cell.j, group.css_id);
+                  styleCell_wn8yudpte8l0vgmjvhoe(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -944,17 +949,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_2ekrlaeyy7v1i7yytkft, .table th.tinytable_css_2ekrlaeyy7v1i7yytkft { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_xya1rqdj9tbtez8x4r9w, .table th.tinytable_css_xya1rqdj9tbtez8x4r9w { text-align: center; }
-      .table td.tinytable_css_6c7m6083292t8z9ivjd2, .table th.tinytable_css_6c7m6083292t8z9ivjd2 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_v63koke6mct9npkeepuk, .table th.tinytable_css_v63koke6mct9npkeepuk { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_siro6sbgg1oseivc8bl0, .table th.tinytable_css_siro6sbgg1oseivc8bl0 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_m93r78m1arb6ymxdbusl, .table th.tinytable_css_m93r78m1arb6ymxdbusl { text-align: left; }
-      .table td.tinytable_css_2fzor4ftpwlx0ajradnl, .table th.tinytable_css_2fzor4ftpwlx0ajradnl { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_xdi0iavhi35bnzhwjh7a, .table th.tinytable_css_xdi0iavhi35bnzhwjh7a { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_qioxdcz0rh4fq6qxzynt, .table th.tinytable_css_qioxdcz0rh4fq6qxzynt { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_5l4ryj0gnsnrp3hsjf38, .table th.tinytable_css_5l4ryj0gnsnrp3hsjf38 { text-align: center; }
+      .table td.tinytable_css_4wcpklsv1qjbg0op6bih, .table th.tinytable_css_4wcpklsv1qjbg0op6bih { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_9navcoxlasp5mgpnk348, .table th.tinytable_css_9navcoxlasp5mgpnk348 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_lps91bmw0g4f1soy6248, .table th.tinytable_css_lps91bmw0g4f1soy6248 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_7261afaenjsjlqqhvopz, .table th.tinytable_css_7261afaenjsjlqqhvopz { text-align: left; }
+      .table td.tinytable_css_80z7dpxct3amz1z97e88, .table th.tinytable_css_80z7dpxct3amz1z97e88 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_dj0g3xj3pdmi01yi0kl3, .table th.tinytable_css_dj0g3xj3pdmi01yi0kl3 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_fwjvlhovlfw8vpzm36b5" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_wn8yudpte8l0vgmjvhoe" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
